--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "android-platform-tools",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Fully self contained module that wraps the Android SDK platform tools in node",
   "main": "index.js",
   "bin": {
@@ -17,6 +17,7 @@
   },
   "author": "Jamie Sherriff",
   "license": "MIT",
+  "email": "sherriffjamienz@gmail.com",
   "homepage": "https://github.com/jamie-sherriff/android-platform-tools",
   "dependencies": {
     "chalk": "^1.1.3",
