Explain readme cli commands better, bump version

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "android-platform-tools",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Fully self contained module that wraps the Android SDK platform tools in node",
-  "main": "index.js",
+  "main": "./index.js",
   "bin": {
     "adbn": "./adb.js",
     "adb": "./adb.js"
