--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "android-platform-tools",
-  "version": "0.0.9",
+  "version": "0.0.10",
   "description": "Fully self contained module that wraps the Android SDK platform tools in node",
   "main": "./index.js",
   "bin": {
@@ -28,11 +28,11 @@
     "request": "^2.81.0"
   },
   "devDependencies": {
-    "ava": "~0.22.0",
-    "eslint": "~4.4.1",
-    "gulp": "~3.9.1",
-    "gulp-eslint": "~4.0.0",
-    "babel-eslint": "~8.0.0"
+    "ava": "^0.22.0",
+    "eslint": "^4.6.1",
+    "gulp": "^3.9.1",
+    "gulp-eslint": "^4.0.0",
+    "babel-eslint": "^8.0.0"
   },
   "keywords": [
     "android",
