--- a/package.json
+++ b/package.json
@@ -5,9 +5,15 @@
   "main": "./index.js",
   "bin": {
     "adbn": "./src/adb.js",
+    "fastbootn": "./src/fastboot.js",
+    "etc1tooln": "./src/etc1tool.js",
+    "hprof-convn": "./src/hprof-conv.js",
+    "sqlite3n": "./src/hprof-conv.js",
     "adb": "./src/adb.js",
     "fastboot": "./src/fastboot.js",
-    "fastbootn": "./src/fastboot.js"
+    "etc1tool": "./src/etc1tool.js",
+    "hprof-conv": "./src/hprof-conv.js",
+    "sqlite3": "./src/hprof-conv.js"
   },
   "scripts": {
     "test": "ava",
