Fix silly mistake with sqlite3

--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "fastbootn": "./src/fastboot.js",
     "etc1tooln": "./src/etc1tool.js",
     "hprof-convn": "./src/hprof-conv.js",
-    "sqlite3n": "./src/hprof-conv.js",
+    "sqlite3n": "./src/sqlite3.js",
     "adb": "./src/adb.js",
     "fastboot": "./src/fastboot.js",
     "etc1tool": "./src/etc1tool.js",
     "hprof-conv": "./src/hprof-conv.js",
-    "sqlite3": "./src/hprof-conv.js"
+    "sqlite3": "./src/sqlite3.js"
   },
   "scripts": {
     "test": "ava",
