--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,6 +4,7 @@ environment:
     # node.js
     - nodejs_version: "6"
     - nodejs_version: "8"
+    - nodejs_version: "9"
 # Install scripts. (runs after repo cloning)
 install:
   # Get the latest stable version of Node.js or io.js
